syntax = "proto3";
package proto;
option go_package = ".;proto";

import "google/protobuf/timestamp.proto";
// import "google/protobuf/empty.proto";

message DrowsinessData {
  string username = 1;
  string car_id = 2;
  google.protobuf.Timestamp time = 3;
  double response_time = 4;
  double working_hour = 5;
  double latitude = 6;
  double longitude = 7;
}

message CreateDrowsinessDataResponse { string drowsiness_id = 1; }

service DrowsinessService {
  rpc CreateDrowsinessData(DrowsinessData)
      returns (CreateDrowsinessDataResponse) {}
}